--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	},
 	"dependencies": {
 		"@turf/helpers": "^7.3.1",
-		"flatgeobuf": "^4.3.3"
+		"flatgeobuf": "^4.3.3",
+		"maplibre-gl": "^5.15.0"
 	}
 }
