--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"typescript-eslint": "^8.47.0",
 		"vite": "^7.2.2",
 		"vitest": "^4.0.10",
-		"vitest-browser-svelte": "^2.0.1"
+		"vitest-browser-svelte": "^2.0.1",
+		"wrangler": "^4.58.0"
 	},
 	"dependencies": {
 		"@turf/helpers": "^7.3.1",
